K8s/multipass/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: ismael16.com
    http:
      paths:
      - backend:
          serviceName: traefik-ingress-service
          servicePort: 8080
