K8s/multipass/load-balancer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-svc
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws..
spec:
  type: LoadBalancer
  selector:
    app: web-application
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
